Work in progress for the line animation on load (animation using linearGradient). To solve : aspect ratio not responsive

--- a/src/components/animatedLine/_animatedLine.scss
+++ b/src/components/animatedLine/_animatedLine.scss
@@ -15,10 +15,10 @@
   height: 100%;
   padding-top: 100px;
   padding-left: 40px;
-  padding-right: 40px;
-  opacity: 0.5;
+  padding-right: 175px;
+  opacity: 0.7;
 }
 
-#svg_pathAnimatedLine {
-  animation: 6000ms ease-in-out forwards animLinePath;
-}
+// #svg_pathAnimatedLine {
+//   animation: 6000ms ease-in-out forwards animLinePath;
+// }
