--- a/src/components/switchLanguage/_switchLanguage.scss
+++ b/src/components/switchLanguage/_switchLanguage.scss
@@ -5,9 +5,9 @@
   z-index: 200;
   top: 0px;
   left: 0px;
-  width: 77px;
-  height: 27px;
-  border-radius: 0px 5px 5px 0px;
+  width: 62px;
+  height: 20px;
+  border-radius: 0px 4px 4px 0px;
   background: url("../../assets/icon-language-fr.png");
   background-size: cover;
   background-position: center;
@@ -21,9 +21,9 @@
   z-index: 200;
   top: 0;
   left: 0;
-  width: 77px;
-  height: 27px;
-  border-radius: 0px 5px 5px 0px;
+  width: 62px;
+  height: 20px;
+  border-radius: 0px 4px 4px 0px;
   background: url("../../assets/icon-language-en.png");
   background-size: cover;
   background-position: center;
